<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/image_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/image_edit_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark">
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/image_edit_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="90dip"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:background="@android:color/background_dark">

                <RadioButton
                    android:id="@+id/image_edit_adjust"
                    android:drawableTop="@drawable/selector_image_edit"
                    android:text="@string/edit_edit"
                    style="@style/ImageEditor_radiobutton"/>

                <RadioButton
                    android:id="@+id/image_edit_beauty"
                    android:drawableTop="@drawable/selector_image_beauty"
                    android:text="@string/edit_beauty"
                    style="@style/ImageEditor_radiobutton"/>

                <RadioButton
                    android:id="@+id/image_edit_adds"
                    android:drawableTop="@drawable/selector_image_adds"
                    android:text="@string/edit_adds"
                    style="@style/ImageEditor_radiobutton"/>

                <RadioButton
                    android:id="@+id/image_edit_filter"
                    android:drawableTop="@drawable/selector_image_filter"
                    android:text="@string/edit_filter"
                    style="@style/ImageEditor_radiobutton"/>

                <RadioButton
                    android:id="@+id/image_edit_frame"
                    android:drawableTop="@drawable/selector_image_frame"
                    android:text="@string/edit_frame"
                    style="@style/ImageEditor_radiobutton"/>

            </RadioGroup>
        </FrameLayout>


        <LinearLayout
            android:id="@+id/photo_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/panel_take_photo"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:orientation="horizontal"></LinearLayout>

        <com.example.ld.displaycamera.CameraGrid
            android:id="@+id/masking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/image_edit_layout" />

    </RelativeLayout>
</FrameLayout>